<resources>
    <string name="app_name">导控终端</string>
    <string name="daokong_control">导控指令</string>
    <string name="caiding_control">裁定指令</string>
    <string name="data_update">数据采集</string>
    <string name="data_connect">数据通讯</string>
    <string name="score">打分</string>
    <string name="input_ip_hint">IP地址</string>
    <string name="input_port_hint">端口</string>
    <string name="connect">连接</string>
    <string name="remote_address">远程地址%s</string>
    <string name="local_address">本地地址%s</string>
    <string name="ip_address">ip地址:</string>
    <string name="cancel">取消</string>
    <string name="ok">确认</string>
    <string name="complete">上传</string>
    <string name="upload">上传</string>


    <string name="person_control_die">违规裁死</string>
    <string name="person_control_alive">死亡复活</string>
    <string name="person_control_add">补充弹数</string>


    <string name="bar_control_up">起靶</string>
    <string name="bar_control_ask">询问环数</string>
    <string name="bar_control_down">倒靶</string>
    <string name="bar_control_scream">尖叫</string>
    <string name="bar_control_sound">枪声</string>

    <string name="sure_score">确认给%s扣分？</string>
    <string name="red">红方</string>
    <string name="blue">蓝方</string>
</resources>
