<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="activity"
            type="com.seekting.killer.BarsControlActivity"/>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginLeft="@dimen/margin"
            android:src="@mipmap/back_arrow"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:text="@string/daokong_control"
            android:textColor="#1f1f1f"
            android:textSize="28sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:weightSum="5">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/bar_control_up"
                style="@style/ios_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{activity::onUpClick}"
                android:text="@string/bar_control_up"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/bar_control_down"
                style="@style/ios_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{activity::onDownClick}"
                android:text="@string/bar_control_down"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/bar_control_scream"
                style="@style/ios_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{activity::onScreamClick}"
                android:text="@string/bar_control_scream"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/bar_control_sound"
                style="@style/ios_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{activity::onSoundClick}"
                android:text="@string/bar_control_sound"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

        </LinearLayout>


    </LinearLayout>
</layout>