<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="activity"
            type="com.seekting.killer.PersonControlActivity"/>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginLeft="@dimen/margin"
            android:src="@mipmap/back_arrow"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:text="@string/caiding_control"
            android:textColor="#1f1f1f"
            android:textSize="28sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:weightSum="4">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/person_control_die"
                style="@style/ios_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_control_die"
                android:onClick="@{activity::onDieCLick}"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/person_control_alive"
                style="@style/ios_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{activity::onAliveCLick}"
                android:text="@string/person_control_alive"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/person_control_add"
                style="@style/ios_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{activity::onAddCLick}"
                android:text="@string/person_control_add"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

        </LinearLayout>


    </LinearLayout>
</layout>