<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="ipAddress"
            type="com.seekting.killer.model.IPAddress"/>

        <variable
            name="activity"
            type="com.seekting.killer.ConnectActivity"/>
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/input_ip_hint"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="12"
                android:orientation="horizontal">


                <com.seekting.killer.view.IpAddressTextView
                    android:id="@+id/ip_input1"
                    android:layout_width="@dimen/ip_v4_input"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:maxLength="3"
                    android:text="@={ipAddress.ip1}"


                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="."/>

                <com.seekting.killer.view.IpAddressTextView
                    android:id="@+id/ip_input2"
                    android:layout_width="@dimen/ip_v4_input"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:maxLength="3"
                    android:text="@={ipAddress.ip2}"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="."/>

                <com.seekting.killer.view.IpAddressTextView
                    android:id="@+id/ip_input3"
                    android:layout_width="@dimen/ip_v4_input"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:maxLength="3"
                    android:text="@={ipAddress.ip3}"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="."/>

                <com.seekting.killer.view.IpAddressTextView
                    android:id="@+id/ip_input4"
                    android:layout_width="@dimen/ip_v4_input"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:maxLength="3"
                    android:text="@={ipAddress.ip4}"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"/>

                <com.seekting.killer.view.IpAddressTextView
                    android:id="@+id/port"
                    android:layout_width="@dimen/ip_v4_port_input"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:hint="@string/input_port_hint"
                    android:inputType="number"
                    android:maxLength="8"
                    android:text="@={ipAddress.port}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/result"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@={ipAddress.shortString}"
                    />

                <Button
                    android:id="@+id/connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{activity::onConnectedClick}"

                    android:text="@string/connect"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>